WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216092
REGRESSION (
r237835
): WebCore::TextDecorationThickness constructor fails to initialize m_length
https://bugs.webkit.org/show_bug.cgi?id=216092
Summary
REGRESSION (r237835): WebCore::TextDecorationThickness constructor fails to i...
David Kilzer (:ddkilzer)
Reported
2020-09-02 13:10:15 PDT
WebCore::TextDecorationThickness constructor fails to initialize m_length. Regressed here:
Bug 191242
: Parsing support for text-underline-offset and text-decoration-thickness <
https://bugs.webkit.org/show_bug.cgi?id=191242
> <
https://trac.webkit.org/r237835
> Found by clang static analyzer using the optin.cplusplus.UninitializedObject checker.
Attachments
Patch v1
(1.62 KB, patch)
2020-09-02 13:11 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-09-02 13:11:08 PDT
Created
attachment 407792
[details]
Patch v1
Tim Horton
Comment 2
2020-09-02 13:13:24 PDT
Comment on
attachment 407792
[details]
Patch v1 Technically there is no path there, but I guess it doesn't hurt?
David Kilzer (:ddkilzer)
Comment 3
2020-09-02 13:41:46 PDT
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 407792
[details]
> Patch v1 > > Technically there is no path there, but I guess it doesn't hurt?
Yes. this is a hardening fix.
David Kilzer (:ddkilzer)
Comment 4
2020-09-03 10:06:18 PDT
Comment on
attachment 407792
[details]
Patch v1 Adding cq+ since failures in fast/block/margin-collapse/103.html are happening across multiple patches. Not related to this patch.
EWS
Comment 5
2020-09-03 10:22:31 PDT
Committed
r266531
: <
https://trac.webkit.org/changeset/266531
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407792
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-09-03 10:23:15 PDT
<
rdar://problem/68287137
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug