REGRESSION (r237835): WebCore::TextDecorationThickness constructor fails to initialize m_length <https://webkit.org/b/216092>

Reviewed by Tim Horton.

* rendering/style/TextDecorationThickness.h:
(WebCore::TextDecorationThickness):
- Add default initializer for m_length.


Canonical link: https://commits.webkit.org/228933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266531 268f45cc-cd09-0410-ab3c-d52691b4dbfc