Source/WebCore/rendering/style/TextDecorationThickness.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2018-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -119,7 +119,7 @@ private:
     }
 
     Type m_type;
-    float m_length;
+    float m_length { 0 };
 };
 
 inline TextStream& operator<<(TextStream& ts, const TextDecorationThickness& thickness)
